[Prepare for DBI Release] 3.4.0-dbi-1d8f6ac6
also suffix `-dbi` for Kernel artifacts

--- a/kernel/examples/kernel-examples/pom.xml
+++ b/kernel/examples/kernel-examples/pom.xml
@@ -41,13 +41,13 @@ limitations under the License.-->
     <dependencies>
         <dependency>
             <groupId>io.delta</groupId>
-            <artifactId>delta-kernel-api</artifactId>
+            <artifactId>delta-kernel-api-dbi</artifactId>
             <version>${delta-kernel.version}</version>
         </dependency>
 
         <dependency>
             <groupId>io.delta</groupId>
-            <artifactId>delta-kernel-defaults</artifactId>
+            <artifactId>delta-kernel-defaults-dbi</artifactId>
             <version>${delta-kernel.version}</version>
         </dependency>
 
